--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Bentham&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+:root{
+  --color-code: font-family: 'Lato', sans-serif;
+}
 
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: --color-code;
   padding: 0;
   margin: 0;
+
   /* background-color: #f3f3f3; */
 }
 
@@ -46,12 +51,12 @@
 /* Form */
 .form {
   /* grid-column: 1/2; */
-  background: #f7f7f7;
+  /* background: #f7f7f7; */
   /* overflow-x: scroll; */
   overflow-y: scroll;
 }
 form {
-  color: #212121;
+  color: #fff;
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
@@ -59,9 +64,10 @@ form {
 }
 form > div {
   background-color: white;
-  border: 1px solid #d8d9da;
+  /* border: 1px solid #d8d9da; */
   padding: 15px 10px;
   margin-bottom: 10px;
+  border-radius: 10px;
 }
 .form .info-1 {
   line-height: 30px;
@@ -75,10 +81,12 @@ form > div {
   width: 100px;
   outline: none;
   border: none;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #fff;
   text-align: center;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #4b4b47;
+  color: #fff;
 }
 .form .info-1 .input-div:first-child input {
   width: 40px;
@@ -124,6 +132,7 @@ form .button-input button {
   background-color: white;
   border: 1px solid #b1b3b5;
   cursor: pointer;
+  /* border-radius: 0px 7px 7px 0px; */
 }
 .info-2 small {
   display: block;
@@ -131,7 +140,7 @@ form .button-input button {
   margin-top: 6px;
   font-size: 12px;
   font-weight: bold;
-  color: #383838;
+  color: white;
 }
 .info-2 .hidden {
   display: none;
