--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ form .info-3 .info-3-part2 > div:last-child {
 /* Fixing */
 small.errors {
   display: block;
-  color: red;
+  color: #fff;
 }
 
 .imgss {
